@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<registry>
+
+    <record name="ftw.file.disable_download_redirect">
+        <field type="plone.registry.field.Bool">
+            <title>Disable redirecting to the download view</title>
+        </field>
+        <value>False</value>
+    </record>
+
+</registry>
